Fixing overflow on mobile screen

--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -302,7 +302,7 @@ section {
     
     .navbar.mobile{
         display: none;
-        width: 100vw;
+        width: 100%;
         max-height: 100vh;
     }
 
@@ -381,12 +381,12 @@ section {
     }
     .container.about-me {
         width: 100%;
-        max-width: 100vw;
+        max-width: 100%;
     }
 
     /* SKILL MOBILE */
     .container.skill{
-        width:100vw;
+        width:100%;
     }
     .container.skill>h2{
         margin-top: .25rem;
